[package]
name = "at-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
crossterm = "0.29.0"
directories = "6.0.0"
hex = "0.4.3"
image = "0.25.6"
linkify = "0.10.0"
open = "5.3.2"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12.18", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
textwrap = { version = "0.16.2", default-features = false, features = ["unicode-width"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3.20.0"
